# oro_base_input_layer

./: .gitignore  CMakeLists.txt  compile_commands.json  count_braces.py  input_layer_node.service  oro_cloud_bridge.service
docs/: README.md  notes_am.md
include/command/: cloud_receiver_thread.hpp  command_ingress_node.hpp
include/data/: mcu_serial_reader_node.hpp  oro_protocol.hpp  publish_filter.hpp  ring_buffer.hpp  sensor_payloads.hpp  serial_port.hpp  topic_registry.hpp
scripts/: oro_cloud_bridge.py  oro_cloud_bridge_copy.py  video_recorder.py
src/: main.cpp
src/command/: cloud_receiver_thread.cpp  command_ingress_node.cpp
src/data/: mcu_serial_reader_node.cpp  publish_filter.cpp  serial_port.cpp
